PharmaDemo/src/objects/Stock_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Account__r.Id ,  Account__r.Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Orders</relationshipLabel>
        <relationshipName>Stock_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clone_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;   Contact__r.Id   ,  Contact__r.Full_Name__c  , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stock Orders</relationshipLabel>
        <relationshipName>Stock_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Line_Items__c</fullName>
        <label>Order Line Items</label>
        <summaryForeignKey>Order_Line_Detail__c.Stock_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_List_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Price_List__r.Id  , Price_List__r.Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Stock Orders</relationshipLabel>
        <relationshipName>Stock_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Account on Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error in data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatched</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>Order_Line_Detail__c.Price__c</summarizedField>
        <summaryForeignKey>Order_Line_Detail__c.Stock_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Wholesaler__r.Id  , Wholesaler__r.Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Orders</relationshipLabel>
        <relationshipName>Stock_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Your_Reference__c</fullName>
        <label>Your Reference</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stock Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Your_Reference__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Order_Line_Items__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>Wholesaler__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyOrders</fullName>
        <columns>Your_Reference__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Order_Line_Items__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>Wholesaler__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ORDER-{000000}</displayFormat>
        <label>Stock Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>